Fix metadata retrival

--- a/views/index.pug
+++ b/views/index.pug
@@ -12,6 +12,6 @@ block content
 
       .instance
         p.title Instance ID
-        p.detail Hey #{instance_id}
+        p.detail #{instance_id}
         p.title Availability Zone
         p.detail #{az}
